	PR java/21418 	* class.c (inherits_from_p): Try to lay out super class 	if it is not already laid out. 	(maybe_layout_super_class): Handle the case where SUPER_CLASS 	is a NULL_TREE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104483 138bc75d-0d04-0410-961f-82ee72b054a4